ditambahkan SimpleXMLRequest untuk adapter request xml dengan menggunakan volley u/ request dan parsing xml menggunakan simpleframwork:xml, ditambahkan logo bank pada sedekah online

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,8 +15,9 @@
         "Komitmen dan semangat yang kuat berperan besar dalam proses mewujudkan mimpi menjadi kenyataan.
         "Begitulah yang tercermin dari komunitas anak muda asal Yogyakarta."
         "Sebuah komunitas yang terealisasi karena sebuah mimpi. "
-        "Hidup berdampingan dalam bermasyarakat senantiasa mengajarkan untuk berbagi terhadap sesama,  di samping itu memang begitu lah ajaran dari tiap agama. Sesuai dengan falsafah Jawa “urip ki kudu iso ndungkluk, ojo mung ndangak”, yang berarti kita hidup harus bisa melihat ke bawah kepada mereka yang membutuhkan uluran tangan, jangan lah menatap pada hingar-bingar kehidupan yang merupakan nafsu dunia.\n"
-        "Hidup ini akan terasa indah jika masing-masing di antara kita menyadari akan nikmatnya berbagi terhadap sesama. Lihatlah kemesraan keluarga semut, yang mau menyisikan sebagian sisa makanannya untuk saudara-saudara mereka. Alangkah indahnya mereka yang mau bergotong royong dengan yang lain hanya untuk mengangkat sebutir nasi. Alam di sekitar kita telah begitu banyak mengajarkan pada kita bagaimana caranya untuk berbagi dengan yang lain\nKawan, bagilah kebahagiaan kita kepada sesama walapun itu hanya sedikit. Janganlah kita lihat nilai dari apa yang kita berikan, tapi lihatlah kebahagiaan mereka terhadap ketulusan dan keikhlasan kita dalam memberi. Seribu rupiah bagi kita mungkin tidak memiliki arti apa-apa, namun bagi mereka yang tidak seberuntung kita, seribu rupiah merupakan anugrah yang tiada tara, karena dengannya mereka dapat menyambung hidup di dunia."
-
+        "Hidup berdampingan dalam bermasyarakat senantiasa mengajarkan untuk berbagi terhadap sesama,  di samping itu memang begitu lah ajaran dari tiap agama. Sesuai dengan falsafah Jawa “urip ki kudu iso ndungkluk, ojo mung ndangak”, yang berarti kita hidup harus bisa melihat ke bawah kepada mereka yang membutuhkan uluran tangan, jangan lah menatap pada hingar-bingar kehidupan yang merupakan nafsu dunia."
+        "Hidup ini akan terasa indah jika masing-masing di antara kita menyadari akan nikmatnya berbagi terhadap sesama. Lihatlah kemesraan keluarga semut, yang mau menyisikan sebagian sisa makanannya untuk saudara-saudara mereka. Alangkah indahnya mereka yang mau bergotong royong dengan yang lain hanya untuk mengangkat sebutir nasi. Alam di sekitar kita telah begitu banyak mengajarkan pada kita bagaimana caranya untuk berbagi dengan yang lain"
     </string>
+    <string name="title_activity_test_todelete">testTodelete</string>
+    <string name="title_activity_to_delete">toDelete</string>
 </resources>
